2017-08-29 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Multiple indeces (vector) accepted in answer() and expression() functions. Used for inserting value when multiple items is selected.
	* Highlight matching parentheses

2017-08-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Remove assumption type complex from GUI

2017-08-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix parse status function argument shortening and ellipsizing

2017-08-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* New icon (mainly because of missing scalable image for the old)

2017-08-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Enhanced superscript on buttons (do not use <sup>)

2017-08-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not save height of keypad or window with tabs hidden

2017-08-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Expression undo/redo

2017-08-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fixed custom font sizes
	* Default to a larger font size
	* Use '×' (00D6) as default mulitplication sign and add middle dot as alternative multiplication sign (both present in more fonts than the true multiplication dot)
	* Fixed/enhanced matrix/vector editing

2017-08-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use glib-compile-resources for ui files (makes it easier to relocate or run the application without installing)
	* Fix matrix/vector editing

2017-08-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Apply functions with more than one argument to the stack

2017-08-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Multiline expression entry

2017-08-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Percentage calculation dialog

2017-08-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Alternative simplified function edit dialog
	* Fix blurry text with GDK_SCALE > 1

2017-08-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Redesigned keypad
