@@ -1,3 +1,2 @@
 * Instant apply for all parameters in plot
 * Split up interface code
-* Matching parentheses highlighting
