@@ -2,6 +2,7 @@
 
 	* Multiple indeces (vector) accepted in answer() and expression() functions. Used for inserting value when multiple items is selected.
 	* Highlight matching parentheses
+	* Go back to previous RPN mode settings (separating stack and syntax completely) and use all keyboard keys for RPN operations by default
 
 2017-08-27 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
